# serde-json-canonicalizer

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: main.yml  nightly.yml
src/: jcs.rs  lib.rs  util.rs
tests/: basic_types.rs  number_formatting.rs  testdata.rs  tests_from_rfc_text.rs
tests/resources/: rfc_example.input.json  rfc_sorting.expected.json  rfc_sorting.input.json
tests/resources/generated-numbers/: .gitignore  numgen.js
tests/resources/testdata/: README.md
