[package]
name = "serde_json_canonicalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itoa = "1.0.6"
ryu-js = "0.2.2"
serde = "1.0"
serde_json = { version = "1.0", features = [ "float_roundtrip" ] }

[dev-dependencies]
test-case = "3.1.0"
